<resources>
    <string name="app_name">eWarta GKI Serpong</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ewarta">eWarta</string>
    <string name="menu_pelangi">Majalah Pelangi</string>
    <string name="menu_ibadah">Jadwal Ibadah</string>
    <string name="menu_pendeta">Jadwal Pendeta</string>
    <string name="menu_hubungi">Hubungi Kami</string>
    <string name="menu_liturgi">Liturgi</string>
    <string name="menu_katekisasi">Daftar Katekisasi</string>
    <string name="menu_bkj">Buku Kehidupan Jemaat</string>
    <string name="menu_youtube">Youtube</string>
    <string name="menu_website">Website</string>
    <string name="title_activity_jadwal_ibadah">Jadwal Ibadah</string>
    <string name="title_activity_jadwal_pendeta">Jadwal Pendeta</string>
    <string name="title_activity_hubungi_kami">Hubungi Kami</string>
    <string name="title_activity_event_tahunan">Event Tahunan - Natal</string>
    <string name="title_activity_katekisasi">Daftar Katekisasi</string>
    <string name="title_activity_website">Website</string>
    <string name="title_nomer_telepon">Nomer Telepon</string>
    <string name="nomer_telepon">(021) 537 0366</string>
    <string name="title_email_address">Alamat Email</string>
    <string name="email_address">kantor@gkiserpong.org</string>

    <string name="minggu">Minggu</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    <string name="perjanjian">Dengan Perjanjian</string>

    <string name="pendeta_yosias">Pdt. Yosias Nugroho Wijaya</string>
    <string name="pendeta_manda">Pdt. Manda Laika Dandel</string>
    <string name="pendeta_marfan">Pdt. Marfan F. Nikijuluw Tahamata</string>
    <string name="pendeta_yonatan">Pdt. Yonatan Wijayanto</string>
    <string name="pendeta_agus">Pdt. Em. Agus Susanto</string>
    <string name="pendeta_koordinasi">Koordinasi Pendeta</string>


    <string name="jam_6">06:00</string>
    <string name="jam_8">08:00</string>
    <string name="jam_1030">10:30</string>
    <string name="jam_17">17:00</string>
    <string name="wib">WIB</string>

    <string name="ibadah">Ibadah</string>

    <string name="ibadah_umum">Ibadah Umum Minggu</string>
    <string name="jadwal_ibadah_umum">06:00; 08:00; 10:30; 17:00 WIB</string>
    <string name="ibadah_anak">Ibadah Anak Minggu</string>
    <string name="jadwal_ibadah_anak">06:00; 08:00; 10:30; 17:00 WIB</string>
    <string name="ibadah_tunas">Ibadah Tunas Minggu</string>
    <string name="jadwal_ibadah_tunas">07:30 WIB</string>
    <string name="ibadah_remaja">Ibadah Remaja Minggu</string>
    <string name="jadwal_ibadah_remaja">08:00 WIB</string>
    <string name="persekutuan_senior">Persekutuan Senior Sabtu</string>
    <string name="jadwal_persekutuan_senior">Sabtu minggu kedua, 16:00 WIB</string>
    <string name="jadwal_kantor_gereja">Jadwal Kantor Gereja</string>
    <string name="jadwal_kantor_gereja_minggu">Minggu (07.00 &#8211; 12.00 &amp; 16.30 &#8211; 18.30 WIB)</string>
    <string name="jadwal_kantor_gereja_selasa">Selasa &#8211; Sabtu (08.00 &#8211; 16.00 WIB)</string>


    <string name="gkis">GKI Serpong</string>
    <string name="ewarta_title">eWarta\nGKI Serpong</string>

    <string name="copyright">GKI Serpong 2019-%d %s</string>

</resources>
