<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="none"
        xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".JadwalPendeta1Activity">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/greenLite">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:text="@string/selasa"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:text="@string/pendeta_yosias"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/greenLite">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:text="@string/rabu"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:text="@string/pendeta_manda"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/greenLite">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:text="@string/kamis"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:text="@string/pendeta_marfan"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/greenLite">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:text="@string/jumat"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:text="@string/pendeta_yonatan"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/greenLite">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:text="@string/perjanjian"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:text="@string/pendeta_agus"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
</ScrollView>