<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="none"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".HubungiKami1Activity">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/selasa"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/pendeta_yosias"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/pendeta_marfan"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/rabu"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/pendeta_manda"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/pendeta_agus"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/kamis"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/pendeta_koordinasi"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/jumat"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/pendeta_yonatan"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/perjanjian"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/pendeta_agus"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>