<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="none"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".JadwalIbadah1Activity">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/ibadah_umum"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/jadwal_ibadah_umum"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/ibadah_anak"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/jadwal_ibadah_umum"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/ibadah_tunas"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/jadwal_ibadah_tunas"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/ibadah_remaja"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/jadwal_ibadah_remaja"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/accent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="28sp"
                        android:text="@string/persekutuan_senior"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:text="@string/jadwal_persekutuan_senior"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>