<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HubungiKami1Activity">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/blueLite">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:text="@string/title_nomer_telepon"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:text="@string/nomer_telepon"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/blueLite">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:text="@string/title_email_address"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:text="@string/email_address"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>